frontend/src/index.css
.form {
    width: 100%;
    max-width: 330px;
    padding: 15px;
    margin: auto;
    height: 100%;
}

.greentext {
    color: green;
    font-weight: bold;
}

.redtext {
    color: red;
    font-weight: bold;
}

